fix(styles): adjust right margin for profile picture on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -241,7 +241,7 @@ footer {
     transform: translateY(1px); 
 }
 
-/* Estilos generales */
+
 .menu-toggle {
     display: none; /* Ocultar en pantallas grandes */
     cursor: pointer;
@@ -255,26 +255,26 @@ footer {
 @media (max-width: 768px) {
 
     .menu-toggle {
-        display: block; /* Mostrar el menú hamburguesa en pantallas pequeñas */
-        font-size: 28px; /* Tamaño del ícono del menú */
-        padding: 10px; /* Espacio alrededor del ícono */
+        display: block; 
+        font-size: 28px; 
+        padding: 10px; 
         border-radius: 5px;
         background-color: #333;
         color: #fff;
         position: absolute;
-        top: 10px; /* Posición más arriba */
+        top: 10px; 
         right: 20px;
     }
 
     #nav-menu {
-        display: none; /* Ocultar el menú de navegación en pantallas pequeñas */
+        display: none; 
         flex-direction: column;
-        align-items: center; /* Centrar elementos */
+        align-items: center; 
         width: 100%;
         position: absolute;
-        top: 60px; /* Espacio más ajustado para el menú */
+        top: 60px; 
         background-color: #333;
-        padding: 20px 0; /* Ajusta el padding para el menú */
+        padding: 20px 0; 
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
@@ -285,24 +285,27 @@ footer {
     nav ul {
         display: flex;
         flex-direction: column;
-        align-items: center; /* Centrar los elementos del menú */
+        align-items: center; 
         gap: 15px; /* Espacio entre los elementos */
-        font-size: 20px; /* Reducir el tamaño del texto */
+        font-size: 20px; 
     }
 
     .social-icons {
-        margin-top: 10px; /* Menos espacio entre el menú y los íconos sociales */
+        margin-top: 10px; 
         display: flex;
-        gap: 20px; /* Más espacio entre los íconos */
+        gap: 20px; 
         justify-content: center;
-        font-size: 24px; /* Aumentar el tamaño de los íconos */
+        font-size: 24px; 
         width: 100%;
     }
 
     .social-icons i {
-        font-size: 1.8rem; /* Tamaño de los íconos sociales */
+        font-size: 1.8rem; 
     }
-
+    .profile-picture {
+        height: 380px;
+        margin-right: 10%;
+    }
     .skills div {
         width: 80px;
     }
